--- a/csc470/views/major.html
+++ b/csc470/views/major.html
@@ -45,6 +45,7 @@
 				<option value="2">Computer Engineering</option>
 			</select>
 		</div>
-		<input type="submit" class="btn btn-primary" value="Submit" style="margin-top: 10px;">
+		<!--<input type="submit" action="Update" class="btn btn-primary" value="Submit" style="margin-top: 10px;">-->
+        <form method="post" action="/majorSubmit" enctype="multipart/form-data"><input class="btn btn-primary" type="submit" value="Submit" /></form>
 	</div>
 </div>
