more navigation, some login

--- a/csc470/views/index.html
+++ b/csc470/views/index.html
@@ -28,8 +28,8 @@
 				<li><a href="https://wa-dsu.prod.sdbor.edu/WebAdvisor/webadvisor?TOKENIDX=8137505581&CONSTITUENCY=WBST&TYPE=M&PID=CORE-WBST">WebAdvisor</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-				<li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+				<li><a href="signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+				<li><a href="login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
 			</ul>
 		</div>
 	</div>
@@ -40,10 +40,10 @@
 		<h2>Home</h2>
 		<h3>Major: <h3>
 		<div class="btn-group-vertical">
-			<a type="button" class="btn btn-primary" href="major.html">Select / Change Major</a>
+			<a type="button" class="btn btn-primary" href="major">Select / Change Major</a>
 			<a type="button" class="btn btn-primary">Classes Current Status</a>
 			<a type="button" class="btn btn-primary">Classes Left to Take</a>
-			<a type="button" class="btn btn-primary" href="track.html">Track Progress</a>
+			<a type="button" class="btn btn-primary" href="track">Track Progress</a>
 			<a type="button" class="btn btn-primary">Create Schedule</a>
 		</div>
 	</div>
