--- a/csc470/views/login.html
+++ b/csc470/views/login.html
@@ -38,7 +38,7 @@
 <div class="main">
 	<div class="center addpadding">
 		<h2>Login</h2>
-		<form action="/person.php" method="post">
+		<form action="/login" method="post">
 			<div class="form-group">
 				<label for="firstname">Username</label>
 				<input class="form-control" type="text" name="username" placeholder="Username">
