--- a/csc470/views/index.ejs
+++ b/csc470/views/index.ejs
@@ -1,11 +1,11 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Login</title>
+	<title>Advisor Home</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="stylesheets/navbar.css">
-	<link rel="stylesheet" type="text/css" href="stylesheets/login.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/index.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -24,12 +24,13 @@
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav">
-				<li><a href="index.html">Home</a></li>
+				<li class="active"><a href="index.html">Home</a></li>
 				<li><a href="https://wa-dsu.prod.sdbor.edu/WebAdvisor/webadvisor?TOKENIDX=8137505581&CONSTITUENCY=WBST&TYPE=M&PID=CORE-WBST">WebAdvisor</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-				<li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+				<li><a href="signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+				<li><a href="login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                <li><a href="profile"><span class="glyphicon glyphicon-user"></span> Accout</a></li>
 			</ul>
 		</div>
 	</div>
@@ -37,18 +38,17 @@
 
 <div class="main">
 	<div class="center addpadding">
-		<h2>Login</h2>
-		<form action="/login" method="post">
-			<div class="form-group">
-				<label for="firstname">Username</label>
-				<input class="form-control" type="text" name="username" placeholder="Username">
-			</div>
-			<div class="form-group">
-				<label for="lastname">Password</label>
-				<input class="form-control" type="text" name="password" placeholder="Password">
-			</div>
-			<a type="button" class="btn btn-primary" href="signup.html">Create Account</a>
-			<input type="submit" class="btn btn-primary" value="Login">
-		</form>
-	</div>	
+		<h2>Home</h2>
+		<h3>Major: </h3>
+		<div class="btn-group-vertical">
+			<a type="button" class="btn btn-primary" href="major">Select / Change Major</a>
+			<a type="button" class="btn btn-primary"  href="error">>Classes Current Status</a>
+			<a type="button" class="btn btn-primary"  href="error">>Classes Left to Take</a>
+			<a type="button" class="btn btn-primary" href="track">Track Progress</a>
+			<a type="button" class="btn btn-primary"  href="track">>Create Schedule</a>
+		</div>
+	</div>
 </div>
+
+</body>
+</html>
