--- a/csc470/views/profile.ejs
+++ b/csc470/views/profile.ejs
@@ -1,6 +1,9 @@
-﻿<html>
-  <head><title>PROFILE</title></head>
-  <body>
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+    <% include ./navbar %>
+</head>
+<body>
     welcome <% if (user) { %><%= user %><% } %>
   </body>
 </html>
