--- a/csc470/views/error.ejs
+++ b/csc470/views/error.ejs
@@ -1,9 +1,7 @@
 ﻿<!DOCTYPE html>
-
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title>ERROR</title>
+    <% include ./navbar %>
 </head>
 <body>
     ERROR
