--- a/csc470/views/navbar.ejs
+++ b/csc470/views/navbar.ejs
@@ -20,7 +20,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span> 
 			</button>
-			<a class="navbar-brand" href="index.html">DSU Advisor</a>
+			<a class="navbar-brand" href="/">DSU Advisor</a>
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav">
