--- a/csc470/views/index.ejs
+++ b/csc470/views/index.ejs
@@ -1,22 +1,20 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <% include ./navbar %>
-</head>
-<body>
-<div class="main">
-	<div class="center addpadding">
-		<h2>Home</h2>
-		<h3>Major: </h3>
-		<div class="btn-group-vertical">
-			<a type="button" class="btn btn-primary" href="major">Select / Change Major</a>
-			<a type="button" class="btn btn-primary"  href="error">>Classes Current Status</a>
-			<a type="button" class="btn btn-primary"  href="error">>Classes Left to Take</a>
-			<a type="button" class="btn btn-primary" href="track">Track Progress</a>
-			<a type="button" class="btn btn-primary"  href="track">>Create Schedule</a>
-		</div>
-	</div>
-</div>
-
-</body>
-</html>
+	<head>
+		<% include ./navbar %>
+	</head>
+	<body>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<% if (!user) {
+			Welcome! Please <a href="/login">log in.</a>
+			} %>
+			else {
+			Hello, <%= user.username %>. View your <a href="/profile">profile.</a>
+			} %>
+	</body>
+<html>
