--- a/csc470/views/navbar.ejs
+++ b/csc470/views/navbar.ejs
@@ -20,11 +20,11 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span> 
 			</button>
-			<a class="navbar-brand" href="/">DSU Advisor</a>
+			<a class="navbar-brand" href="/index">DSU Advisor</a>
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="index.html">Home</a></li>
+				<li class="active"><a href="/menu">Menu</a></li>
 				<li><a href="https://wa-dsu.prod.sdbor.edu/WebAdvisor/webadvisor?TOKENIDX=8137505581&CONSTITUENCY=WBST&TYPE=M&PID=CORE-WBST">WebAdvisor</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
