--- a/csc470/views/classes_left.ejs
+++ b/csc470/views/classes_left.ejs
@@ -8,10 +8,14 @@
 	<br>
 	<br>
     <div class="main">
-	<h1>TEST</h1>
+	<h1>Courses Left to Take</h1>
 	<ul>
 		<% for (var i = 0; i < all_courses.length; i++){ %>
-		<li> <%= all_courses[i]._name %> </li>
+		<li> 
+			<% if (classes_taken.indexOf(all_courses[i]) == -1){ %>
+			<b> <%= all_courses[i]._name %>
+			<% } %>
+		</li>
 		<% } %>
 	</ul>
 
