--- a/csc470/views/menu.ejs
+++ b/csc470/views/menu.ejs
@@ -10,10 +10,10 @@
 		<h3>Major: </h3>
 		<div class="btn-group-vertical">
 			<a type="button" class="btn btn-primary" href="major">Select / Change Major</a>
-			<a type="button" class="btn btn-primary"  href="error">>Classes Current Status</a>
-			<a type="button" class="btn btn-primary"  href="error">>Classes Left to Take</a>
+			<a type="button" class="btn btn-primary"  href="classes_current">Classes Current Status</a>
+			<a type="button" class="btn btn-primary"  href="classes_left">Classes Left to Take</a>
 			<a type="button" class="btn btn-primary" href="track">Track Progress</a>
-			<a type="button" class="btn btn-primary"  href="track">>Create Schedule</a>
+			<a type="button" class="btn btn-primary"  href="schedule">Create Schedule</a>
 		</div>
 	</div>
 </div>
