--- a/csc470/views/signup.ejs
+++ b/csc470/views/signup.ejs
@@ -4,23 +4,26 @@
     <% include ./navbar %>
 </head>
 <body>
-
+<br>
+<br>
+<br>
+<br>
 <div class="main">
 	<div class="center addpadding">
 		<h2>Create Account</h2>
 		<div class="well">
-			<form action="/person.php" method="post">
+			<form action="/createAccount" method="post">
 				<div class="form-group">
-					<label for="firstname">Username (School Email)</label>
-					<input class="form-control" type="text" name="username" placeholder="example@trojans.dsu.edu">
+					<label for="userName">Username (School Email)</label>
+					<input class="form-control" type="text" name="userName" placeholder="example@trojans.dsu.edu">
 				</div>
 				<div class="form-group">
-					<label for="lastname">Create Password</label>
+					<label for="password">Create Password</label>
 					<input class="form-control" type="text" name="password" placeholder="Password">
 					<span>Password must be eight characters, include a special character, a capital letter, and a number.</span>
 				</div>
 				<div class="form-group">
-					<label for="lastname">First Name</label>
+					<label for="firstname">First Name</label>
 					<input class="form-control" type="text" name="firstname" placeholder="Jane">
 				</div>
 				<div class="form-group">
