--- a/csc470/views/classes_left.ejs
+++ b/csc470/views/classes_left.ejs
@@ -4,20 +4,30 @@
     <% include ./navbar %>
 </head>
 <body>
-	<br>
-	<br>
-	<br>
-    <div class="main">
-	<h1>Courses Left to Take</h1>
-	<ul>
-		<% for (var i = 0; i < all_courses.length; i++){ %>
-		<li> 
-			<% if (classes_taken.indexOf(all_courses[i]) == -1){ %>
-			<b> <%= all_courses[i]._name %>
+<div class="main">
+		<div class="center addpadding">
+		<h1>Classes Left to Take</h1>
+		<table class="table table-striped table-condensed table-hover">
+			<thead>
+				<tr>
+					<th>Class Name</th>
+					<th>Registered</th>
+					<th>Unregistered</th>
+				</tr>
+			<% for (var i = 0; i < all_classes.length; i++){ %>
+				<% if (classes_taken.indexOf(all_classes[i]) == -1){ %>
+				<tr> 
+					<td> <%= all_classes[i]._name %> </td>
+					<% if (classes_registered.indexOf(all_classes[i]) != -1){%> 
+					<td > &#10004; </td> <td></td>
+					<% } else { %>
+					<td> </td> <td > &#10004; </td>
+					<% } %>
+				</tr>
+				<% } %>
 			<% } %>
-		</li>
-		<% } %>
-	</ul>
-
+		</table>
+		</div>
+</div>
 </body>
 
