--- a/csc470/views/schedule.ejs
+++ b/csc470/views/schedule.ejs
@@ -10,8 +10,8 @@
     <div class="main">
 	<h1>TEST</h1>
 	<ul>
-		<% for (var i = 0; i < all_courses.length; i++){ %>
-		<li> <%= all_courses[i]._name %> </li>
+		<% for (var i = 0; i < all_classes.length; i++){ %>
+		<li> <%= all_classes[i]._name %> </li>
 		<% } %>
 	</ul>
 
