--- a/csc470/views/signup.ejs
+++ b/csc470/views/signup.ejs
@@ -23,12 +23,12 @@
 					<span>Password must be eight characters, include a special character, a capital letter, and a number.</span>
 				</div>
 				<div class="form-group">
-					<label for="firstname">First Name</label>
-					<input class="form-control" type="text" name="firstname" placeholder="Jane">
+					<label for="firstName">First Name</label>
+					<input class="form-control" type="text" name="firstName" placeholder="Jane">
 				</div>
 				<div class="form-group">
-					<label for="lastname">Last Name</label>
-					<input class="form-control" type="text" name="lastname" placeholder="Doe">
+					<label for="lastName">Last Name</label>
+					<input class="form-control" type="text" name="lastName" placeholder="Doe">
 				</div>
 				<input type="submit" class="btn btn-primary" value="Submit">
 			</form>
