Tried to get login working, added success/fail messages. Placeholder for classes_current.

--- a/csc470/views/login.ejs
+++ b/csc470/views/login.ejs
@@ -8,6 +8,9 @@
 <div class="main">
 	<div class="center addpadding">
 		<h2>Login</h2>
+		<% if (typeof message !== "undefined" ) {%>
+		<h3> <%= message %>
+		<% } %>
 		<form action="/login" method="post">
 			<div class="form-group">
 				<label for="firstname">Username</label>
