--- a/csc470/views/menu.ejs
+++ b/csc470/views/menu.ejs
@@ -8,6 +8,11 @@
 	<div class="center addpadding">
 		<h2>Home</h2>
 		<h3>Major: </h3>
+		<% if ( typeof message !== "undefined" ) { %>
+		<h4> <%= message %> </h4>
+		<% } %>
+
+		<h4>
 		<div class="btn-group-vertical">
 			<a type="button" class="btn btn-primary" href="major">Select / Change Major</a>
 			<a type="button" class="btn btn-primary"  href="classes_current">Classes Current Status</a>
