--- a/csc470/views/partials/navbar.ejs
+++ b/csc470/views/partials/navbar.ejs
@@ -30,9 +30,13 @@
 				<li><a href="https://wa-dsu.prod.sdbor.edu/WebAdvisor/webadvisor?TOKENIDX=8137505581&CONSTITUENCY=WBST&TYPE=M&PID=CORE-WBST">WebAdvisor</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
+				<% if (typeof user_isloggedin !== "undefined" && user_isloggedin === true) { %>
+				<li><a href="profile"><span class="glyphicon glyphicon-user"></span> Account</a></li>
+				<li><a href="logout"><span class="glyphicon glyphicon-user"></span> Logout</a></li>
+				<% } else {%>
 				<li><a href="signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
 				<li><a href="login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                <li><a href="profile"><span class="glyphicon glyphicon-user"></span> Account</a></li>
+				<% } %>
 			</ul>
 		</div>
 	</div>
