--- a/csc470/views/account/profile.ejs
+++ b/csc470/views/account/profile.ejs
@@ -36,7 +36,7 @@
             <span class="fa fa-anchor"></span>Course Info
           </h1>
 		  <ul class="list-group">
-			<a class="list-group-item list-group-item-action list-group-item-info" href="/menu/classes_current" ><center>Update Classes Taken</center></a>
+			<a class="list-group-item list-group-item-action list-group-item-info" href="/classes/current" ><center>Update Classes Taken</center></a>
 			<p class="list-group-item" ><strong>Major</strong>: <%= user.major %></p>
 			<p class="list-group-item" ><strong>Program Length</strong>: <%= user.projLength %></p>
 		  </ul>
