--- a/csc470/views/classes/track.ejs
+++ b/csc470/views/classes/track.ejs
@@ -8,9 +8,9 @@
 <div class="main">
 	<div class="center addpadding">
 		<h2 class="center">Track Progress</h2>
-		<p style="margin-top: 10px;" class="center"><% if (credits_needed >= 0){ %> <%= credits_needed %> <% } else { %> Zero <% } %> credits are currently needed to ensure graduation date of (Blank)<p>
-		<p class="center">Which in turn means taking (blank) credits each semester.<p>
-		<a type="button" class="btn btn-primary" href="classes_left">Classes Left To Take</button>
+		<p style="margin-top: 10px;" class="center"><% if (credits_left >= 0){ %> <%= credits_left %> <% } else { %> Zero <% } %> credits are currently<p>
+		<p class="center">At 15 credits/semester, you have <%= Math.ceil(credits_left / 15) %> semesters remaining.<p>
+		<a type="button" class="btn btn-primary" href="/classes/current">Current Status of All Classes</button>
 	</div>
 </div>
 
