--- a/csc470/views/menu/menu.ejs
+++ b/csc470/views/menu/menu.ejs
@@ -18,7 +18,7 @@
 			<a type="button" class="btn btn-primary"  href="/classes_current">Classes Current Status</a>
 			<a type="button" class="btn btn-primary"  href="/classes_left">Classes Left to Take</a>
 			<a type="button" class="btn btn-primary" href="/track">Track Progress</a>
-			<a type="button" class="btn btn-primary"  href="/schedule">Create Schedule</a>
+			<a type="button" class="btn btn-primary"  href="/status">Create Schedule</a>
 		</div>
 	</div>
 </div>
