--- a/csc470/views/menu/menu.ejs
+++ b/csc470/views/menu/menu.ejs
@@ -17,8 +17,8 @@
 			<a type="button" class="btn btn-primary" href="/major">Select / Change Major</a>
 			<a type="button" class="btn btn-primary"  href="/classes/current">Classes Current Status</a>
 			<a type="button" class="btn btn-primary"  href="/classes/taken">Classes Left to Take</a>
-			<a type="button" class="btn btn-primary" href="/track">Track Progress</a>
-			<a type="button" class="btn btn-primary"  href="/status">Create Schedule</a>
+			<a type="button" class="btn btn-primary" href="/classes/schedule">Track Progress</a>
+			<a type="button" class="btn btn-primary"  href="/classes/schedule">Create Schedule</a>
 		</div>
 	</div>
 </div>
