--- a/csc470/views/classes/current.ejs
+++ b/csc470/views/classes/current.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> <% include ../partials/navbar %> </head>
+<head>
+    <% include ../partials/navbar %>
+</head>
 <body>
 <div class="main">
 <div class="container-fluid" >
