--- a/csc470/views/menu/major.ejs
+++ b/csc470/views/menu/major.ejs
@@ -8,15 +8,23 @@
 <div class="main">
 	<div class="center addpadding">
 		<h3>Select A Major</h3>
-		<div class="select_join">
-			<select name="txtCountry">
-				<option value="" disabled="disabled" selected="selected">Major</option>
-				<option value="1">Computer Science</option>
-				<option value="2">Computer Engineering</option>
-			</select>
-		</div>
-		<!--<input type="submit" action="Update" class="btn btn-primary" value="Submit" style="margin-top: 10px;">-->
-        <form method="post" action="/majorSubmit" enctype="multipart/form-data"><input class="btn btn-primary" type="submit" value="Submit" /></form>
+		
+
+		<form action="/majorSubmit" method="post">
+      
+      <div class="select_join">
+        <select name="major">
+          <option value="" disabled="disabled" selected="selected">Major</option>
+          <option value="csc">Computer Science</option>
+          <option value="ceng">Computer Engineering</option>
+        </select>
+      </div>
+      <br>
+      <button type="submit" class="btn btn-warning btn-lg">Submit</button>
+    </form>
+
+
+
 	</div>
 </div>
 
