more cosmetic changes, added update program length

--- a/csc470/views/account/profile.ejs
+++ b/csc470/views/account/profile.ejs
@@ -19,6 +19,9 @@
 
     <div class="text-center">
       <div class="col-sm-6 well" style="word-wrap: break-word;">
+	            <h1>
+					User Information
+				</h1>
 				<ul class="list-group">
 				  <li class="list-group-item"><strong>id</strong>: <%= user._id %></li>
 				  <li class="list-group-item"><strong>Name</strong>: <%= user.firstName %> <%= user.lastName %></li>
@@ -33,7 +36,7 @@
     <div class="text-center">
       <div class="col-sm-6 well">
           <h1>
-            <span class="fa fa-anchor"></span>Course Info
+            Program Information
           </h1>
 		  <ul class="list-group">
 			<a class="list-group-item list-group-item-action list-group-item-info" href="/classes/current" ><center>Update Classes Taken</center></a>
