--- a/csc470/views/account/signup.ejs
+++ b/csc470/views/account/signup.ejs
@@ -49,8 +49,10 @@
         <select name="progLength">
           <option value="" disabled="disabled" selected="selected">Program Length</option>
           <option value="0">Unknown</option>
+          <option value="1">1 yrs</option>
           <option value="2">2 yrs</option>
           <option value="4">4 yrs</option>
+          <option value="5">5 yrs</option>
         </select>
       </div>
       <br>
