--- a/csc470/views/menu/menu.ejs
+++ b/csc470/views/menu/menu.ejs
@@ -19,7 +19,7 @@
 			<a type="button" class="btn btn-primary" href="/major">Select / Change Major</a>
 			<a type="button" class="btn btn-primary"  href="/classes/current">Change Status of Current Classes</a>
 			<a type="button" class="btn btn-primary"  href="/classes/taken">Classes Left to Take</a>
-			<a type="button" class="btn btn-primary" href="/classes/schedule">Track Progress</a>
+			<a type="button" class="btn btn-primary" href="/classes/track">Track Progress</a>
 			<a type="button" class="btn btn-primary"  href="/classes/schedule">Create Schedule</a>
 		</div>
 	</div>
