--- a/csc470/views/classes/current.ejs
+++ b/csc470/views/classes/current.ejs
@@ -4,9 +4,8 @@
     <% include ../partials/navbar %>
 </head>
 <body>
-	<div class="main"><div class="col-md-3"></div>
-<div class="container-fluid col-md-6" >
-<div class="">
+<div class="main">
+<div class="container main">
 <h2>Classes Left to Take</h2>
 <table class="table table-striped table-condensed table-hover">
 	<thead>
@@ -14,6 +13,129 @@
 		<th>Class Name</th>
 		<th class="pull-right">Status</th>
 	</thead>
+
+	<% for (var i=0; i < user.classesInProgress.length; i++){ %><tr>
+		<% var course_json = JSON.stringify(user.classesInProgress[i]) %>
+		<td><%= user.classesInProgress[i]._subject %> <%= user.classesInProgress[i]._courseNumber %></td>
+		<td><%= user.classesInProgress[i]._name %></td>
+		<td>
+			<div class="dropdown">
+				<button class="pull-right btn btn-secondary btn-sm dropdown-toggle" type=button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopu="true" aria-expanded="false">
+					In Progress
+				</button>
+				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+					<h6 class="dropdown-header">Mark as...</h6>
+					<li>
+						<form method="post" action="/classes/completed" class="inline">
+						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Completed</button>
+						</form>
+					</li>
+					<li>
+						<form method="post" action="/classes/take" class="inline">
+						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >In Progress</button>
+						</form>
+					</li>
+					<li>
+						<form method="post" action="/classes/register" class="inline">
+						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Registered</button>
+						</form>
+					</li>
+					<li>
+						<form method="post" action="/classes/waitlist" class="inline">
+						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Waitlisted</button>
+						</form>
+					</li>
+					<li>
+						<form method="post" action="/classes/untake" class="inline">
+						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Still Needed</button>
+						</form>
+					</li>
+				</div>
+			</div>
+		</td>
+	</tr><% } %>
+
+	<% for (var i=0; i < user.classesSignedUpfor.length; i++){ %><tr>
+		<% var course_json = JSON.stringify(user.classesSignedUpfor[i]) %>
+		<td><%= user.classesSignedUpfor[i]._subject %> <%= user.classesSignedUpfor[i]._courseNumber %></td>
+		<td><%= user.classesSignedUpfor[i]._name %></td>
+		<td>
+			<div class="dropdown">
+				<button class="pull-right btn btn-secondary btn-sm dropdown-toggle" type=button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopu="true" aria-expanded="false">
+					Registered
+				</button>
+				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+					<h6 class="dropdown-header">Mark as...</h6>
+					<li>
+						<form method="post" action="/classes/completed" class="inline">
+						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Completed</button>
+						</form>
+					</li>
+					<li>
+						<form method="post" action="/classes/take" class="inline">
+						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >In Progress</button>
+						</form>
+					</li>
+					<li>
+						<form method="post" action="/classes/register" class="inline">
+						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Registered</button>
+						</form>
+					</li>
+					<li>
+						<form method="post" action="/classes/waitlist" class="inline">
+						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Waitlisted</button>
+						</form>
+					</li>
+					<li>
+						<form method="post" action="/classes/untake" class="inline">
+						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Still Needed</button>
+						</form>
+					</li>
+				</div>
+			</div>
+		</td>
+	</tr><% } %>
+
+	<% for (var i=0; i < user.classesWaitlisted.length; i++){ %><tr>
+		<% var course_json = JSON.stringify(user.classesWaitlisted[i]) %>
+		<td><%= user.classesWaitlisted[i]._subject %> <%= user.classesWaitlisted[i]._courseNumber %></td>
+		<td><%= user.classesWaitlisted[i]._name %></td>
+		<td>
+			<div class="dropdown">
+				<button class="pull-right btn btn-secondary btn-sm dropdown-toggle" type=button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopu="true" aria-expanded="false">
+					Waitlisted
+				</button>
+				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+					<h6 class="dropdown-header">Mark as...</h6>
+					<li>
+						<form method="post" action="/classes/completed" class="inline">
+						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Completed</button>
+						</form>
+					</li>
+					<li>
+						<form method="post" action="/classes/take" class="inline">
+						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >In Progress</button>
+						</form>
+					</li>
+					<li>
+						<form method="post" action="/classes/register" class="inline">
+						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Registered</button>
+						</form>
+					</li>
+					<li>
+						<form method="post" action="/classes/waitlist" class="inline">
+						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Waitlisted</button>
+						</form>
+					</li>
+					<li>
+						<form method="post" action="/classes/untake" class="inline">
+						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Still Needed</button>
+						</form>
+					</li>
+				</div>
+			</div>
+		</td>
+	</tr><% } %>
 
 	<% for (var i = 0; i < classes_needed.length; i++){ %> <tr>
 		<% var course_json = JSON.stringify(classes_needed[i]) %>
@@ -97,131 +219,8 @@
 		</td>
 	</tr><% } %>
 
-	<% for (var i=0; i < user.classesInProgress.length; i++){ %><tr>
-		<% var course_json = JSON.stringify(user.classesInProgress[i]) %>
-		<td><%= user.classesInProgress[i]._subject %> <%= user.classesInProgress[i]._courseNumber %></td>
-		<td><%= user.classesInProgress[i]._name %></td>
-		<td>
-			<div class="dropdown">
-				<button class="pull-right btn btn-secondary btn-sm dropdown-toggle" type=button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopu="true" aria-expanded="false">
-					In Progress
-				</button>
-				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					<h6 class="dropdown-header">Mark as...</h6>
-					<li>
-						<form method="post" action="/classes/completed" class="inline">
-						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Completed</button>
-						</form>
-					</li>
-					<li>
-						<form method="post" action="/classes/take" class="inline">
-						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >In Progress</button>
-						</form>
-					</li>
-					<li>
-						<form method="post" action="/classes/register" class="inline">
-						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Registered</button>
-						</form>
-					</li>
-					<li>
-						<form method="post" action="/classes/waitlist" class="inline">
-						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Waitlisted</button>
-						</form>
-					</li>
-					<li>
-						<form method="post" action="/classes/untake" class="inline">
-						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Still Needed</button>
-						</form>
-					</li>
-				</div>
-			</div>
-		</td>
-	</tr><% } %>
-
-	<% for (var i=0; i < user.classesWaitlisted.length; i++){ %><tr>
-		<% var course_json = JSON.stringify(user.classesWaitlisted[i]) %>
-		<td><%= user.classesWaitlisted[i]._subject %> <%= user.classesWaitlisted[i]._courseNumber %></td>
-		<td><%= user.classesWaitlisted[i]._name %></td>
-		<td>
-			<div class="dropdown">
-				<button class="pull-right btn btn-secondary btn-sm dropdown-toggle" type=button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopu="true" aria-expanded="false">
-					Waitlisted
-				</button>
-				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					<h6 class="dropdown-header">Mark as...</h6>
-					<li>
-						<form method="post" action="/classes/completed" class="inline">
-						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Completed</button>
-						</form>
-					</li>
-					<li>
-						<form method="post" action="/classes/take" class="inline">
-						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >In Progress</button>
-						</form>
-					</li>
-					<li>
-						<form method="post" action="/classes/register" class="inline">
-						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Registered</button>
-						</form>
-					</li>
-					<li>
-						<form method="post" action="/classes/waitlist" class="inline">
-						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Waitlisted</button>
-						</form>
-					</li>
-					<li>
-						<form method="post" action="/classes/untake" class="inline">
-						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Still Needed</button>
-						</form>
-					</li>
-				</div>
-			</div>
-		</td>
-	</tr><% } %>
-
-	<% for (var i=0; i < user.classesSignedUpfor.length; i++){ %><tr>
-		<% var course_json = JSON.stringify(user.classesSignedUpfor[i]) %>
-		<td><%= user.classesSignedUpfor[i]._subject %> <%= user.classesSignedUpfor[i]._courseNumber %></td>
-		<td><%= user.classesSignedUpfor[i]._name %></td>
-		<td>
-			<div class="dropdown">
-				<button class="pull-right btn btn-secondary btn-sm dropdown-toggle" type=button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopu="true" aria-expanded="false">
-					Registered
-				</button>
-				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					<h6 class="dropdown-header">Mark as...</h6>
-					<li>
-						<form method="post" action="/classes/completed" class="inline">
-						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Completed</button>
-						</form>
-					</li>
-					<li>
-						<form method="post" action="/classes/take" class="inline">
-						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >In Progress</button>
-						</form>
-					</li>
-					<li>
-						<form method="post" action="/classes/register" class="inline">
-						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Registered</button>
-						</form>
-					</li>
-					<li>
-						<form method="post" action="/classes/waitlist" class="inline">
-						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Waitlisted</button>
-						</form>
-					</li>
-					<li>
-						<form method="post" action="/classes/untake" class="inline">
-						<button type="submit" name="mark_taken" value="<%= course_json %>" class="btn dropdown-item" >Still Needed</button>
-						</form>
-					</li>
-				</div>
-			</div>
-		</td>
-	</tr><% } %>
 
 </table>
-</div>
 </div>
 </div>
 </body>
