classes/taken (Classes Needed) finished. Could use consistent styling though

--- a/csc470/views/classes/schedule.ejs
+++ b/csc470/views/classes/schedule.ejs
@@ -3,8 +3,7 @@
 <head>
     <% include ../partials/navbar %>
 </head>
-<body>
-	<br>
+<body style="margin-top: 10vh;">
 	<div class="page-header text-center">
 		<h1><span class="fa"></span>Current Schedule</h1>
 	</div>
