--- a/csc470/views/partials/navbar.ejs
+++ b/csc470/views/partials/navbar.ejs
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Advisor Home</title>
+	<title><% if (typeof title !== "undefined") { %> <%= title %> <% } else { %> DSU Advisor <% } %></title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/navbar.css">
