--- a/csc470/views/classes/track.ejs
+++ b/csc470/views/classes/track.ejs
@@ -9,8 +9,14 @@
 <div class="main">
 	<div class="center addpadding">
 		<h2 class="center">Track Progress</h2>
+		<% var aproxSemesters = Math.ceil(credits_left / 15) %>
+		<% if (aproxSemesters <= user.progLength*2) { %>
+		<h3> ON TRACK </h4>
+		<% } else { %>
+		<h3> BEHIND TRACK </h4>
+		<% } %>
 		<p style="margin-top: 10px;" class="center"><% if (credits_left >= 0){ %> <%= credits_left %> <% } else { %> Zero <% } %> credits are currently unfinished.<p>
-		<p class="center">At 15 credits/semester, you have <%= Math.ceil(credits_left / 15) %> semesters remaining.<p>
+		<p class="center">At 15 credits/semester, you have <%= aproxSemesters %> semesters remaining.<p>
 		<a type="button" class="btn btn-primary" href="/classes/current">Current Status of All Classes</button>
 	</div>
 </div>
