--- a/csc470/views/account/signup.ejs
+++ b/csc470/views/account/signup.ejs
@@ -22,39 +22,13 @@
     <form action="/signup" method="post">
       <div class="form-group">
         <div class="form-group">
-          <label>First Name*</label>
-          <input type="text" class="form-control" name="firstName">
-		</div>
-        <div class="form-group">
-          <label>Last Name*</label>
-          <input type="text" class="form-control" name="lastName">
-		</div>
-        <label>Email*</label>
-        <input type="text" class="form-control" name="email">
-		</div>
+        <label>Email</label>
+          <input type="text" class="form-control" name="email"></input>
+		    </div>
       <div class="form-group">
-        <label>Password*</label>
-        <input type="password" class="form-control" name="password">
+        <label>Password</label>
+        <input type="password" class="form-control" name="password"></input>
 		</div>
-      <br>
-      <div class="select_join">
-        <select name="major">
-          <option value="" disabled="disabled" selected="selected">Major</option>
-          <option value="csc">Computer Science</option>
-          <option value="ceng">Computer Engineering</option>
-        </select>
-      </div>
-      <br>
-      <div class="select_join">
-        <select name="progLength">
-          <option value="" disabled="disabled" selected="selected">Program Length</option>
-          <option value="0">Unknown</option>
-          <option value="1">1 yrs</option>
-          <option value="2">2 yrs</option>
-          <option value="4">4 yrs</option>
-          <option value="5">5 yrs</option>
-        </select>
-      </div>
       <br>
       <button type="submit" class="btn btn-warning btn-lg">Sign Up</button>
     </form>
