--- a/csc470/views/account/profile.ejs
+++ b/csc470/views/account/profile.ejs
@@ -41,7 +41,7 @@
 		  <ul class="list-group">
 			<a class="list-group-item list-group-item-action list-group-item-info" href="/classes/current" ><center>Update Classes Taken</center></a>
 			<p class="list-group-item" ><strong>Major</strong>: <%= user.major %></p>
-			<p class="list-group-item" ><strong>Program Length</strong>: <%= user.progLength %></p>
+			<p class="list-group-item" ><strong>Program Length</strong>: <%= user.progLength %> year(s)</p>
 		  </ul>
 
       </div>
