Updated /classes/current styling

--- a/csc470/views/account/profile.ejs
+++ b/csc470/views/account/profile.ejs
@@ -39,9 +39,9 @@
             Program Information
           </h1>
 		  <ul class="list-group">
-			<a class="list-group-item list-group-item-action list-group-item-info" href="/classes/current" ><center>Update Classes Taken</center></a>
 			<p class="list-group-item" ><strong>Major</strong>: <%= user.major %></p>
-			<p class="list-group-item" ><strong>Program Length</strong>: <%= user.projLength %></p>
+			<p class="list-group-item" ><strong>Program Length</strong>: <%= user.progLength %> Years</p>
+			<a class="list-group-item list-group-item-action list-group-item-info" href="/major" ><center>Change Major or Program Length</center></a>
 		  </ul>
 
       </div>
