--- a/csc470/views/classes/taken.ejs
+++ b/csc470/views/classes/taken.ejs
@@ -4,7 +4,7 @@
     <% include ../partials/navbar %>
 </head>
 <body>
-<body style="margin-top: 10vh;">
+<body class="main" style="margin-top: 10vh;">
 	<div class="page-header text-center">
 		<h1><span class="fa"></span>Classes Needed</h1>
 	</div>
