--- a/csc470/views/menu/major.ejs
+++ b/csc470/views/menu/major.ejs
@@ -8,7 +8,7 @@
 <br>
 <div class="main">
 	<div class="center addpadding">
-		<h3>Update Major or Program Lenght</h3>
+		<h3>Update Major or Program Length</h3>
 		
 
 		<form action="/majorSubmit" method="post">
