--- a/csc470/views/account/profile.ejs
+++ b/csc470/views/account/profile.ejs
@@ -3,9 +3,7 @@
   <head>
     <% include ../partials/navbar %>
   </head>
-  <body>
-    <br></br>
-    <br></br>
+  <body class="main">
     <br></br>
 <div class="container">
 
@@ -41,7 +39,7 @@
 		  <ul class="list-group">
 			<p class="list-group-item" ><strong>Major</strong>: <%= user.major %></p>
 			<p class="list-group-item" ><strong>Program Length</strong>: <%= user.progLength %> Years</p>
-			<a class="list-group-item list-group-item-action list-group-item-info" href="/major" ><center>Change Major or Program Length</center></a>
+			<a class="bg-primary list-group-item list-group-item-action list-group-item-info" href="/major" ><center>Change Major or Program Length</center></a>
 		  </ul>
 
       </div>
