--- a/csc470/views/classes/schedule.ejs
+++ b/csc470/views/classes/schedule.ejs
@@ -3,7 +3,7 @@
 <head>
     <% include ../partials/navbar %>
 </head>
-<body style="margin-top: 10vh;">
+<body class="main" style="margin-top: 10vh;">
 	<div class="page-header text-center">
 		<h1><span class="fa"></span>Current Schedule</h1>
 	</div>
