--- a/csc470/views/account/login.ejs
+++ b/csc470/views/account/login.ejs
@@ -3,7 +3,7 @@
   <head>
     <% include ../partials/navbar %>
   </head>
-  <body>
+  <body class="main">
     <br>
       <br>
         <br>
@@ -14,28 +14,34 @@
 	<h1><span class="fa fa-sign-in"></span> Login</h1>
 
 	<!-- show any messages that come back with authentication -->
-	<% if (typeof message.length > 0) { %>
+	<% if (message.length > 0) { %>
 		<div class="alert alert-danger"><%= message %></div>
 	<% } %>
 
 	<!-- LOGIN FORM -->
     <form action="/login" method="post">
-      <div class="form-group">
-        <label>Email</label>
-        <input type="text" class="form-control" name="email">
-		</div>
-      <div class="form-group">
-        <label>Password</label>
-        <input type="password" class="form-control" name="password">
-		</div>
-
-      <button type="submit" class="btn btn-warning btn-lg">Login</button>
+      <div class="row">
+	<div class="input-group form-group">
+	  <label class="input-group-addon">Email</label>
+	  <input aria-describedby="basic-addon2" type="text" class="form-control" name="email">
+	</div>
+      </div>
+      <div class="row">
+	<div class="input-group form-group">
+	  <label class="input-group-addon">Password</label>
+	  <input aria-describedby="basic-addon2" type="password" class="form-control" name="password">
+	</div>
+      </div>
+      <div class="row">
+	<button type="submit" class="btn btn-warning btn-lg pull-right">Login</button>
+      </div>
     </form>
 
-	<hr>
-
-	<p>Need an account? <a href="/signup">Signup</a></p>
-	<p>Or go <a href="/">home</a>.</p>
+    <hr>
+    <div class="row">
+      <p>Need an account? <a href="/signup">Signup</a></p>
+      <p>Or go <a href="/">home</a>.</p>
+    </div>
 
 </div>
 
