--- a/csc470/views/classes/current.ejs
+++ b/csc470/views/classes/current.ejs
@@ -11,8 +11,8 @@
 
 	<ul class="list-group">
 
-	<% var classList = user.classesInProgress %> <% var course_json = JSON.stringify(classList[i]) %>
-	<% for (var i=0; i<classList.length; i++) { %>
+	<% var classList = user.classesInProgress %> 
+	<% for (var i=0; i<classList.length; i++) { %><% var course_json = JSON.stringify(classList[i]) %>
 	<div class="list-group-item col-md-10 col-md-push-1 col-md-pull-1">
 		<div class="row bg-primary">
 			<div class="col-md-4">
@@ -74,8 +74,8 @@
 	</div> <!-- list-group-item col-md-10 col-md-push-1 col-md-pull-1 -->
 	<% } %>
 
-	<% var classList = user.classesSignedUpfor %> <% var course_json = JSON.stringify(classList[i]) %>
-	<% for (var i=0; i<classList.length; i++) { %>
+	<% var classList = user.classesSignedUpfor %> 
+	<% for (var i=0; i<classList.length; i++) { %><% var course_json = JSON.stringify(classList[i]) %>
 	<div class="list-group-item col-md-10 col-md-push-1 col-md-pull-1">
 		<div class="row bg-info">
 			<div class="col-md-4">
@@ -137,8 +137,8 @@
 	<% } %>
 
 
-	<% var classList = user.classesWaitlisted %> <% var course_json = JSON.stringify(classList[i]) %>
-	<% for (var i=0; i<classList.length; i++) { %>
+	<% var classList = user.classesWaitlisted %> 
+	<% for (var i=0; i<classList.length; i++) { %><% var course_json = JSON.stringify(classList[i]) %>
 	<div class="list-group-item col-md-10 col-md-push-1 col-md-pull-1">
 		<div class="row bg-warning">
 			<div class="col-md-4">
@@ -199,8 +199,8 @@
 	</div> <!-- list-group-item col-md-10 col-md-push-1 col-md-pull-1 -->
 	<% } %>
 
-	<% var classList = user.classesFinished %> <% var course_json = JSON.stringify(classList[i]) %>
-	<% for (var i=0; i<classList.length; i++) { %>
+	<% var classList = user.classesFinished %> 
+	<% for (var i=0; i<classList.length; i++) { %><% var course_json = JSON.stringify(classList[i]) %>
 	<div class="list-group-item col-md-10 col-md-push-1 col-md-pull-1">
 		<div class="row bg-success">
 			<div class="col-md-4">
@@ -253,7 +253,7 @@
 	<% } %>
 
 	<% var classList = classes_needed %> <% var course_json = JSON.stringify(classList[i]) %>
-	<% for (var i=0; i<classList.length; i++) { %>
+	<% for (var i=0; i<classList.length; i++) { %><% var course_json = JSON.stringify(classList[i]) %>
 	<div class="list-group-item col-md-10 col-md-push-1 col-md-pull-1">
 		<div class="row bg-danger">
 			<div class="col-md-4">
