fixed menu always active

--- a/csc470/views/partials/navbarMenu.ejs
+++ b/csc470/views/partials/navbarMenu.ejs
@@ -26,7 +26,7 @@
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav">
-				<li class=""><a href="/">Menu</a></li>
+				<li class="active"><a href="/">Menu</a></li>
 				<li><a href="https://wa-dsu.prod.sdbor.edu/WebAdvisor/webadvisor?TOKENIDX=8137505581&CONSTITUENCY=WBST&TYPE=M&PID=CORE-WBST">WebAdvisor</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
