--- a/csc470/views/menu/menu.ejs
+++ b/csc470/views/menu/menu.ejs
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <% include ../partials/navbar %>
+    <% include ../partials/navbarMenu %>
 </head>
 <body>
 <br>
